# noru-de

./: .gitignore  .project  AUTHORS  CMakeLists.txt  ChangeLog  README.md  clickable.yaml
cmake/modules/: QmlTest.cmake
data/: lomiri-greeter-wrapper  lomiri-greeter.desktop.in.in  lomiri-greeter.rules  lomiri.desktop.in.in
data/systemd-user/: CMakeLists.txt  Xwayland.lomiri.in  lomiri-MODE.service.in
debian/: changelog  control  lomiri-common.install  lomiri-greeter.install  lomiri-private.install  rules
examples/wm-theme/: README.md
include/: paths.h.in
plugins/: CMakeLists.txt
plugins/AccountsService/: AccountsService.cpp  AccountsService.h  CMakeLists.txt  README.md  com.lomiri.shell.AccountsService.xml
plugins/AccountsService/Tests/QMLTests/: CMakeLists.txt  main.qml
plugins/Aethercast/: CMakeLists.txt  README.md  aethercast_helper.h  dbus-shared.h  displays.cpp  displays.h  plugin.cpp  plugin.h  qmldir
plugins/Aethercast/Tests/QMLTests/: CMakeLists.txt  main.cpp  main.qml
plugins/Aethercast/Tests/UnitTests/: CMakeLists.txt  tst_aethercast.cpp
plugins/BatteryMonitor/: BatteryMonitor.h  CMakeLists.txt  README.md
plugins/BatteryMonitor/Tests/QMLTests/: CMakeLists.txt  main.cpp  main.qml
plugins/BatteryMonitor/Tests/UnitTests/: CMakeLists.txt  tst_batterymonitor.cpp
plugins/Cursor/: CMakeLists.txt  Cursor.qml  CursorImageInfo.h  InputDispatcherFilter.cpp  MousePointer.cpp  MousePointer.h
plugins/GlobalShortcut/: CMakeLists.txt  README.md  globalshortcut.cpp  globalshortcut.h  globalshortcutregistry.cpp  globalshortcutregistry.h
plugins/GlobalShortcut/Tests/QMLTests/: CMakeLists.txt  main.cpp  main.qml
plugins/Greeter/Lomiri/Launcher/: CMakeLists.txt  launcheritem.h  launchermodelas.h  plugin.cpp  quicklistmodel.h
plugins/Lomiri/ApplicationMenu/: CMakeLists.txt  README.md  applicationmenuregistry.h  dbusapplicationmenuregistry.h
plugins/Lomiri/ApplicationMenu/Tests/QMLTests/: CMakeLists.txt  main.qml
plugins/Lomiri/ApplicationMenu/Tests/UnitTests/: CMakeLists.txt  tst_applicationmenuregistry.cpp  tst_menuservicepath.cpp
plugins/Lomiri/DownloadDaemonListener/: CMakeLists.txt  DownloadTracker.h  README.md
plugins/Lomiri/DownloadDaemonListener/Tests/QMLTests/: CMakeLists.txt  main.qml
plugins/Lomiri/DownloadDaemonListener/Tests/UnitTests/: CMakeLists.txt  tst_downloadtracker.cpp
plugins/Lomiri/InputInfo/: CMakeLists.txt  README.md  qdeclarativeinputdevicemodel.cpp  qdeclarativeinputdevicemodel_p.h  qinputinfo.cpp  qinputinfo.h
plugins/Lomiri/InputInfo/Tests/QMLTests/: CMakeLists.txt  main.cpp  main.qml
plugins/Lomiri/InputInfo/Tests/UnitTests/: CMakeLists.txt  tst_qdeclarativeinputdevicemodel.cpp  tst_qinputinfo.cpp
plugins/Lomiri/InputInfo/linux/: qinputdeviceinfo_linux.cpp  qinputdeviceinfo_linux_p.h
plugins/Lomiri/ModemConnectivity/: CMakeLists.txt  ModemConnectivity.h  README.md
plugins/Lomiri/ModemConnectivity/Tests/QMLTests/: CMakeLists.txt  main.qml
plugins/Lomiri/ModemConnectivity/Tests/UnitTests/: CMakeLists.txt  tst_modemconnectivity.cpp
plugins/Lomiri/Platform/: CMakeLists.txt  platform.h
plugins/Lomiri/Session/: CMakeLists.txt  dbuslomirisessionservice.cpp  dbuslomirisessionservice.h  orientationlock.h
plugins/Powerd/: CMakeLists.txt  Powerd.cpp  Powerd.h  README.md
plugins/Powerd/Tests/QMLTests/: CMakeLists.txt  main.cpp  main.qml
plugins/Powerd/Tests/UnitTests/: CMakeLists.txt  tst_powerd.cpp
plugins/ProcessControl/: CMakeLists.txt  ProcessControl.h  README.md
plugins/ProcessControl/Tests/QMLTests/: CMakeLists.txt  main.qml
plugins/ProcessControl/Tests/UnitTests/: CMakeLists.txt  tst_processcontrol.cpp
plugins/ScreenshotDirectory/: CMakeLists.txt  README.md  ScreenshotDirectory.h
plugins/ScreenshotDirectory/Tests/QMLTests/: CMakeLists.txt  main.qml
plugins/ScreenshotDirectory/Tests/UnitTests/: CMakeLists.txt  tst_screenshotdirectory.cpp
plugins/SessionBroadcast/: CMakeLists.txt  README.md  SessionBroadcast.h
plugins/SessionBroadcast/Tests/QMLTests/: CMakeLists.txt  main.cpp  main.qml
plugins/UInput/: CMakeLists.txt  README.md  uinput.h
plugins/UInput/Tests/QMLTests/: CMakeLists.txt  main.cpp  main.qml
plugins/UInput/Tests/UnitTests/: CMakeLists.txt  tst_uinput.cpp
plugins/Utils/: CMakeLists.txt  EdgeBarrierSettings.qml  appdrawerproxymodel.cpp  appdrawerproxymodel.h  constants.cpp  constants.h  deviceconfig.cpp  deviceconfig.h  fileio.cpp  fileio.h  globalfunctions.cpp  globalfunctions.h  plugin.cpp
plugins/WindowManager/: AvailableDesktopArea.cpp  AvailableDesktopArea.h  TopLevelWindowModel.cpp  TopLevelWindowModel.h
plugins/Wizard/: 50-com.lomiri.wizard.rules  CMakeLists.txt  System.cpp
plugins/Wizard/QtMir/Application/: OSKController.qml
po/: LINGUAS  POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bn_BD.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  (+112 more)
qml/: DeviceConfiguration.qml  DisabledScreenNotice.qml  ErrorApplication.qml  OrientedShell.qml  Shell.qml  ShellScreen.qml
qml/ApplicationMenus/: ApplicationMenuItemFactory.qml  ApplicationMenusLimits.qml  MenuBar.qml  MenuItem.qml  MenuNavigator.qml  MenuPopup.qml  RegisteredApplicationMenuModel.qml
qml/Components/: Background.qml  BackgroundBlur.qml  BlurLayer.qml  BrightnessControl.qml  Dialogs.qml  DragHandle.qml  DraggingArea.qml  EdgeDragEvaluator.qml  FadingLabel.qml  Flickable.qml  GridView.qml  ImageResolver.qml  InputMethod.qml  ItemGrabber.qml  ItemSnapshot.qml  KeymapSwitcher.qml  (+28 more)
src/: CMakeLists.txt  DisplayConfigurationStorage.cpp  LomiriApplication.cpp  LomiriApplication.h  RootState.cpp  RootState.h
tests/mocks/liblightdm/: CMakeLists.txt  MockSessionsModel.cpp  MockSessionsModel.h  MockUsersModel.cpp  MockUsersModel.h
tests/plugins/AccountsService/: CMakeLists.txt  client.cpp
tests/plugins/GlobalShortcut/: CMakeLists.txt  shortcut.qml
tests/plugins/SessionBroadcast/: CMakeLists.txt
(+269 files in other folders)
